# OpenROAD

./: .bant-macros  .bazelignore  .bazelrc  .buildifier.json  .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  AUTHORS  BUILD  BUILD.bazel  Brewfile  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeGraphVizOptions.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CoverageJenkinsfile  Dockerfile  Dockerfile.gcc-4-9  Doxyfile  Jenkinsfile  Jenkinsfile.groovy  LICENSE  MODULE.bazel  OPENROAD.md  README.md  SECURITY.md  SKY130.lyp  WORKSPACE  buildCreateScanChain  buildCreateScanChainWithPartition  buildTestScanChain  build_helper.bzl  (+20 more)
bazel/: BUILD  BUILD.bazel  Dockerfile  InitRunFiles.cpp  README.md  abc_no_readline.patch  bison.bzl  boost_context_disable_parse_headers.patch  build_helper.bzl  bzl_fmt_test.sh  bzl_lint_test.sh  bzl_tidy.sh  embed.cc  extract_zip.bzl  file_to_string.cc  fix-boost-beast.patch  fix_lint.sh  flex.bzl  install.sh  install_test.sh  list_sources.sh  man_pages.bzl  manpages_impl.py  merge_share.bzl  notification.bzl  opensta.BUILD  or-tools.patch  py_fmt_test.sh  py_tidy.sh  python_wrap_cc.bzl  qt-bazel-xcb-cursor-from-source.patch  qt_bazel_bootstrap_headers.patch  requirements.in  requirements_lock_3_13.txt  run_all_tests.sh  scip_tinycthread_tny_prefix.patch  sed_gnulib_polyfill_undef.patch  slang.BUILD  slang_alias.bzl  swig_common.bzl  (+15 more)
bazel/abc-patches/: 0001-mainUtils-flush-prompt-and-handle-eof-without-readline.patch
bazel/bazel-orfs-patches/: 0035-fix-remove-non-root-overrides-from-MODULE.bazel.patch  0035-orfs-bazel-orfs-visible-non-root.patch  0036-fix-sdc-readonly.patch  0036-orfs-single-writer-1_synth-sdc.patch  orfs-genmetrics-tolerate-non-utf8.patch  orfs-log-cmd-clock-fallback.patch  orfs-variables-add-ARRAY-COLS-ROWS.patch  yosys-backend-aiger2.patch  yosys-hdrs.patch  yosys-tcl9-mp-to-ubin.patch  yosys-visibility.patch
bazel/bison-patches/: 0001-gnulib-wrapper-headers-use-I-not-isystem.patch
bazel/boost-icl-patches/: 0001-refactor-interval-lookup-operations-icl-54.patch
bazel/build_settings/: BUILD
bazel/git-patches/: 0001-iquote-own-headers-over-external_include_paths.patch
bazel/glibc_for_apple/: BUILD  portable_qsort.c  portable_rand.c
bazel/gpu/: BUILD  copts.bzl  defs.bzl  system_gpu.bzl
bazel/hermetic-llvm-patches/: 0001-libc-headers-idirafter-precedence.patch
bazel/libxml2_stub/: BUILD.bazel  README.md  libxml2_stub.c  libxml2_stub.ver
bazel/mock-readline/: BUILD.bazel  MODULE.bazel  README.md  stub.c
bazel/openmp/: BUILD  bundled.BUILD.bazel  kmp_config.h  kmp_i18n_default.inc  kmp_i18n_id.inc
bazel/orfs-patches/: yosys-backend-aiger2.patch
bazel/patches/: BUILD  tcl_lang_trim_core.patch
bazel/qt-bazel-patches/: 0001-xcb-build-xcb-util-cursor-from-source.patch
bazel/slang-compat/: README
bazel/tcl-patches/: 0001-tclZipfs-include-vendored-minizip-crypt.h-by-path.patch
cmake-deps/: BUILD.bazel  assemble_bundle.py  defs.bzl  materialize.sh  toolchain.cmake.in  tools.bzl
cmake-deps/shims/: BoostConfig.cmake  BoostConfigVersion.cmake  Eigen3Config.cmake  GTestConfig.cmake  LEMONConfig.cmake  abslConfig.cmake  fmtConfig.cmake  ortoolsConfig.cmake  spdlogConfig.cmake  yaml-cppConfig.cmake
docs/: .gitignore  BUILD  BUILD.bazel  Makefile  README.md  boost_polygon_approach_explanation.md  ccache_benchmark_results.md  conf.py  createNewMsgs.sh  doxymain.md  generate_llms_txt.py  getMessages.py  getMessages.sh  getPatch.py  html_vision.md  index.md  index.rst  odb.md  pytest.ini  requirements.in  requirements.txt  revert-links.py  sphinx_build_test.py  test_write_gds.md  timing_api_bugs.md  timing_report_pr.md  timing_report_resume.md  timing_report_todo.md  toc.yml
docs/_doxygen/: odb.dox
docs/agents/: build.md  ci.md  coding.md  testing-strategy.md  testing.md
docs/api/: odb.md  odb.rst
docs/contrib/: 3DIC.md  3DIC_TODO.md  CI.md  CodingPractices.md  CodingPractices.rst  DatabaseMath.md  DatabaseMath.rst  DeveloperGuide.md  DeveloperGuide.rst  GettingInvolved.md  GettingInvolved.rst  GitGuide.md  LintTargets.md  Logger.md  Logger.rst  Metrics.md  Metrics.rst  OpenroadArch.rst  PlatformBringUp.md  ReadmeFormat.md  TclFormat.md  alpha2_process.md  coding-practices.txt  contributions.md  contributions.rst  database-math.md  developer-guide.md  getting-involved.md
docs/ext/: OpenSTA.md
docs/man/: .gitignore  Makefile  README.md
docs/manpages/: .gitignore  Makefile  README.md  aaaa.md
docs/misc/: AddTool.patch  AddToolFiles.patch  CTS_LUT_Discussion.md  CTS_LUT_Discussion.rst  NewToolDocExample.md
docs/releases/: Alpha2Process.md  (+3 more)
packaging/: BUILD.bazel
python/: __init__.py  pyproject.toml  setup.py
src/: .OpenRoad.tcl.swp  CMakeLists.txt  CpuThrottle.cpp  CpuThrottle.h  DbNetwork.cc  DbNetwork.hh  DbSdcNetwork.cc  DbSdcNetwork.hh  Design.cc  Design.i  Error.cc  Error.i  Exception-py.i  Exception.i  Floorplan.cc  InitFloorplan.cc  InitFloorplan.hh  InitFloorplan.i  InitFloorplan.tcl  InitFlute.cc  InitFlute.hh  Logger.cpp  Main.cc  Main.cc.save  Metrics.tcl  OpenDBNetwork.cc  OpenDBNetwork.hh  OpenRoad-py.cc  OpenRoad-py.i  OpenRoad.cc  OpenRoad.i  OpenRoad.tcl  OpenRoadSingleton.cc  OpenStaDB.cc  OpenStaDB.hh  OpenStaDB.i  OpenStaDB.tcl  OpenStaDBTclInitVar.cc  OpenStaDB_wrap.cc  README.md  (+27 more)
test/: BUILD  BUILD.bazel  CMakeLists.txt  aes.sdc  aes_asap7.metrics  aes_asap7.metrics_limits  aes_asap7.sdc  aes_asap7.tcl  aes_asap7.v  aes_nangate45.metrics  aes_nangate45.metrics_limits  aes_nangate45.sdc  aes_nangate45.tcl  aes_nangate45.v  aes_sky130.tcl  aes_sky130.v  aes_sky130hd.metrics  aes_sky130hd.metrics_limits  aes_sky130hd.sdc  aes_sky130hd.tcl  aes_sky130hd.v  aes_sky130hs.metrics  aes_sky130hs.metrics_limits  aes_sky130hs.sdc  aes_sky130hs.tcl  aes_sky130hs.v  bazel_test.sh  benchmark_delta.sh  bus1.lib  bus1.v  bus16.lef  bus16.lib  bus16.v  check_dev_dep.py  check_visibility.py  cmd_log_trace.ok  cmd_log_trace.tcl  commands_without_load.ok  commands_without_load.tcl  compare_flow_metrics  (+193 more)
(+23716 files in other folders)
